--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -28,6 +28,20 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Ensure CNAME in dist
+        env:
+          CUSTOM_DOMAIN: ${{ secrets.CUSTOM_DOMAIN }}
+        run: |
+          if [ -f CNAME ]; then
+            cp CNAME dist/CNAME
+            echo "Copied CNAME from repo into dist"
+          elif [ -n "$CUSTOM_DOMAIN" ]; then
+            echo "$CUSTOM_DOMAIN" > dist/CNAME
+            echo "Wrote CNAME from CUSTOM_DOMAIN secret into dist"
+          else
+            echo "No CNAME found in repo and CUSTOM_DOMAIN secret not set; continuing without CNAME"
+          fi
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
